--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "crypto": "^1.0.1",
     "discord-player": "^7.1.0",
     "discord-player-youtubei": "^1.4.2",
-    "discord.js": "^14.18.0",
-    "dotenv": "^16.4.7",
+    "discord.js": "^14.22.1",
+    "dotenv": "^16.6.1",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "install": "^0.13.0",
     "mediaplex": "^1.0.0",
     "npm": "^10.9.2",
+    "soundcloud-downloader": "^1.0.0",
     "ytdl-core": "^4.11.5"
   }
 }
