--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "botdiscord",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@discord-player/extractor": "^7.1.0",
-    "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "^0.18.0",
-    "axios": "^1.12.2",
-    "cheerio": "^1.1.2",
-    "crypto": "^1.0.1",
-    "discord-player": "^7.1.0",
-    "discord-player-youtubei": "^1.4.2",
-    "discord.js": "^14.22.1",
-    "dotenv": "^16.6.1",
-    "ffmpeg": "^0.0.4",
-    "ffmpeg-static": "^5.2.0",
-    "fluent-ffmpeg": "^2.1.3",
-    "install": "^0.13.0",
-    "mediaplex": "^1.0.0",
-    "npm": "^10.9.2",
-    "soundcloud-downloader": "^1.0.0",
-    "soundcloud-scraper": "^5.0.3",
-    "ytdl-core": "^4.11.5"
-  }
+    "name": "discord-music-bot",
+    "version": "1.0.0",
+    "description": "A Discord music bot using Riffy and Lavalink",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "author": {
+        "name": "Friday"
+    },
+    "keywords": [
+        "discord",
+        "music",
+        "bot",
+        "riffy",
+        "lavalink"
+    ],
+    "dependencies": {
+        "discord.js": "^14.14.1",
+        "dotenv": "^16.6.1",
+        "riffy": "^1.0.0",
+        "riffy-spotify": "^1.0.0"
+    }
 }
